...
                                        <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="movieCell"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <outlet property="average" destination="wTQ-wG-3Vh" id="TPD-fW-1dy"/>
                                            <outlet property="background" destination="3SD-FT-jLb" id="37Q-VG-wb9"/>
                                            <outlet property="movieImageView" destination="cC7-Df-VlX" id="9eE-0r-Ksd"/>
                                            <outlet property="overview" destination="xtI-MV-x4M" id="SZB-1G-Wx3"/>
                                            <outlet property="title" destination="1S1-xe-lDg" id="zuY-mT-rDM"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="movieTable"/>
                                </userDefinedRuntimeAttributes>
                            </tableView>
                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="unV-ck-pdc">
                                <rect key="frame" x="0.0" y="68" width="414" height="198"/>
                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
...
                                            <outlet property="overview" destination="yyZ-r2-4YD" id="B9f-og-dPq"/>
                                            <outlet property="title" destination="dmh-Xh-kaS" id="egE-Ee-gGO"/>
                                        </connections>
                                    </collectionViewCell>
                                </cells>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="movieCollection"/>
                                </userDefinedRuntimeAttributes>
                            </collectionView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
...
